# bserAnalysis

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: SKILL.md
.github/workflows/: release.yml
docs/adr/: 0001-unified-http-client.md
resources/: .gitkeep
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/command/: bser_client.rs  bser_request.rs  keyboard.rs  mod.rs  overlay.rs  settings.rs
src-tauri/src/core/: dll.rs  ipc.rs  mod.rs  plugin_state.rs
src-tauri/src/game_data/: error.rs  mock.rs  mod.rs  source.rs
src-tauri/src/keyboard/: listener.rs  mod.rs  shortcut.rs
src-tauri/src/overlay/: manager.rs  mod.rs  window.rs
src-tauri/src/request/: cache.rs  dakgg_api.rs  error.rs  helpers.rs  http_client.rs  manager.rs  mod.rs  models.rs  official_api.rs  open_api.rs  types.rs
src-tauri/src/service/: character_stats_render.rs  leaderboard_render.rs  match_render.rs  mod.rs  player_render.rs
src-tauri/src/settings/: mod.rs
src-tauri/tests/: example_test.rs
src/components/: ConfirmDialog.tsx  DoubleConfirmDialog.tsx  ErrorNotifications.tsx  InfoTooltip.tsx  LanguageSelector.tsx  Sidebar.tsx  TitleBar.tsx  profile.tsx  ui.tsx
src/i18n/: index.ts  utils.ts
src/pages/: CharacterDetail.tsx  CharacterLeaderboard.tsx  CharacterStats.tsx  Characters.tsx  Leaderboard.tsx  Overlay.tsx  Search.tsx  Settings.tsx
src/router/: index.tsx
(+49 files in other folders)
